--- a/CtlProperties.resx
+++ b/CtlProperties.resx
@@ -858,6 +858,9 @@
   <data name="comboBoxIdentityStatus.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
   </data>
+  <data name="comboBoxIdentityStatus.Item" xml:space="preserve">
+    <value></value>
+  </data>
   <data name="comboBoxIdentityStatus.Items" xml:space="preserve">
     <value>Sample</value>
   </data>
